--- a/style.css
+++ b/style.css
@@ -1,8 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style-type: none;
 
+    font-size: 14px;
+
     color: #333;
 }
+
+/* NAVIGATION *********************/
+
+.navbar {
+    display: flex;
+    width: 100%;
+    height: 4rem;
+
+    border: 1px solid black;
+    
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.navbar li {
+    margin: 1.3rem .9rem;
+    padding: .3rem;
+}
+
+.avatar {
+    width: 2.5rem;
+    border-radius: 50%;
+}
+
+.img {
+    width: 30px;
+    height: 30px;
+    background-image: 
+    linear-gradient(to top, rgba(255,255,255,0.4), rgba(255,255,255,0.4)),
+    url('./img/dots.svg');
+}
+
+.img:hover { background-image: url('./img/dots.svg'); }
+
