--- a/style.css
+++ b/style.css
@@ -116,3 +116,39 @@ main > p > a:hover {
 }
 
 /* FOOTER *********************/
+
+footer {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 5.5rem;
+
+    bottom: 0;
+    left: 0;
+
+    flex-direction: column;
+    margin-top: 23rem;
+
+    background: #f2f2f2;
+}
+
+.footer_blocks:nth-child(1) {
+    height: 3rem;
+    border: 1px solid rgba(0,0,0,.1);
+}
+
+.footer_blocks:nth-child(1) > p { margin: 1rem; }
+
+.footer_text, footer a { color: rgba(0,0,0,.54); }
+
+footer a:hover { text-decoration: underline; }
+
+.footer_blocks:nth-child(2) {
+    display: flex;
+    margin: 1rem;
+    justify-content: space-between;
+}
+
+.footer_nav_left, .footer_nav_right { display: flex; }
+
+footer li { margin: .1rem .5rem; }
