--- a/style.css
+++ b/style.css
@@ -67,12 +67,35 @@ form {
 
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+}
+
+.wrapper_search {
+    position: relative;
+}
+
+.wrapper_search > i.fa-search {
+    position: absolute;
+    top: 3.1rem;
+    left: 3rem;
+    font-size: 1.1rem;
+    color: #aaa;
+}
+
+.wrapper_search > i.fa-microphone {
+    position: absolute;
+    top: 3.1rem;
+    right: 3rem;
+    font-size: 1.3rem;
+    color: #aaa;
 }
 
 #search {
-    width: 100%;
-    height: 3rem;
-    margin: 1.5rem;
+    width: 41rem;
+    height: 3.3rem;
+    margin: 2rem 1.5rem 1.5rem 1.5rem;
     padding: 0.2rem 4.2rem;
 
     border: 1px solid #ddd;
@@ -103,17 +126,11 @@ form {
 
 input:focus { outline: none; }
 
-main > p {
-    margin: 2rem;
-}
+main > p { margin: 2rem; }
 
-main > p > a {
-    color: blue;
-}
+main > p > a { color: blue; }
 
-main > p > a:hover {
-    text-decoration: underline;
-}
+main > p > a:hover { text-decoration: underline; }
 
 /* FOOTER *********************/
 
@@ -152,3 +169,9 @@ footer a:hover { text-decoration: underline; }
 .footer_nav_left, .footer_nav_right { display: flex; }
 
 footer li { margin: .1rem .5rem; }
+
+.icon_search {
+    width: 1.3rem;
+    height: 1.3rem;
+    background-image: url('./img/search.svg');
+}
